<resources>

    <!--==================================== Common =================================-->
    <string name="app_name">SSC Alliance</string>
    <string name="title_sportclub">Спортклуб</string>
    <string name="title_news">Новости</string>
    <string name="title_sport">Спорт</string>
    <string name="title_team">Сборные</string>


    <!--==================================== Errors =================================-->
    <string name="error_occurred_short">Произошла ошибка.</string>
    <string name="error_occurred_long">Произошла ошибка. Повторите попытку позже.</string>
    <string name="auth_error">Ошибка аутентификации.</string>
    <string name="no_internet_error">Проблемы с соединением.</string>


    <!--==================================== Sections =================================-->
    <string name="section_football">Футбол</string>
    <string name="section_volleyball">Волейбол</string>
    <string name="section_basketball">Баскетбол</string>
    <string name="section_chess">Шахматы</string>
    <string name="section_ping_pong">Настольный теннис</string>
    <string name="section_badminton">Бадминтон</string>


    <string name="tv_current_events">Актуальные мероприятия</string>
    <string name="tv_sections">Секции</string>
    <string name="find_players">Поиск Игроков</string>
    <string name="football">Футбол</string>
    <string name="join">Вступить</string>
    <string name="description">Описание</string>
    <string name="section_schedule">Расписание Занятий</string>
    <string name="organizers">Организаторы</string>
    <string name="photos">Фотографии</string>
    <string name="documents">Документы</string>
    <string name="section_news">Новости Секции</string>
    <string name="tag">#ssc_alliance #асск #студенческийспорт</string>
    <string name="news_title">Футбольный клуб МИРЭА на АССК.фест 2020!</string>
    <string name="news_date">15 октября</string>
    <string name="informations">Информации</string>
    <string name="media">Медиа</string>
    <string name="statistics">Статистика</string>
    <string name="tv_information">Информация</string>
    <string name="event_information">КУБОК РЕКТОРА по волейболу в рамках Чемпионата АССК России 🏆 | итоги лиги «ХАРД» • Мужчины: 🥇«Лови аптечку» 🥈«Кочанус» 🥉«Балтика» • Девушки: 🥇«РТУ МИРЭА» 🥈«Триумф 2.0» 🥉«Shpiёnы» На этом игры турнира не заканчиваются! Впереди финал «ЛАЙТ» лиги, где определятся места каждой команды, которая по результатам отборочных игр не попала в 8-ку сильнейших 💫 🔥 РОЗЫГРЫШ: 15 счастливчиков получат билеты от наших партнеров ВК «Динамо» Москва на матч в рамках Кубка ЕКВ между командами «Динамо» Москва и «Зенит» СПб. 👉🏻 УСЛОВИЯ: поставить лайк данной публикации. 📆17 марта в 19:00 начало матча; 📍ул. Василисы Кожиной, д. 13. Итоги розыгрыша подведем в прямом эфире 16 марта в 22:00 в нашей группе ВКонтакте!</string>
    <string name="tv_date_organizing">Дата проведения</string>
    <string name="event_date_organizing">15 октября 2020. Начало в 12:00</string>
    <string name="tv_address">Адрес</string>
    <string name="tv_social">Соцсети</string>
    <string name="show_more">Показать полностью</string>
    <string name="show_less">Скрыть</string>
    <string name="event_address"><u>проспект вернадского 78</u></string>
    <string name="event_partners">Партнеры</string>
    <string name="show_all">Показать все</string>
    <string name="quantity">182</string>
    <string name="photo_albums">Фото Альбомы</string>
    <string name="all_photos">Все Фотографии</string>
    <string name="video_album">Видео Альбомы</string>
    <string name="video">Видео</string>
    <string name="title">Кубок ректора 2021</string>
    <string name="views">1000 просмотров</string>
    <string name="title_news_details">Девушки из сборной по волейболу совсем скоро начнут свои первые матчи в МССИ</string>
    <string name="mirea_football">Сборная по футболу РТУ МИРЭА</string>
    <string name="_00">00</string>
    <string name="days">дней</string>
    <string name="hour">час</string>
    <string name="minute">мин</string>
    <string name="second">сек</string>
    <string name="time">21:00</string>
    <string name="vs">vs</string>
    <string name="mirea">РТУ МИРЭА</string>
    <string name="mai">МАИ</string>
    <string name="score">2:0</string>
    <string name="schedule">расписание игр</string>
    <string name="match_results">результаты игр</string>
    <string name="tv_training">Расписание</string>
    <string name="tv_contact">Контакты</string>
    <string name="name">Алексей Меньшенин</string>
    <string name="position">главный тренер</string>
    <string name="phone">+7 777 777–77–77</string>
    <string name="training">ПН: 10:00 - 12:00 ВТ: 10:00 - 12:00 СР: 10:00 - 12:00 ЧТ: 10:00 - 12:00 ПТ: 10:00 - 12:00 СБ, ВС: выходной</string>
    <string name="text_match">Руководитель бегового сообщества «Альянса» Александр Самедов занял 2 место на Кубке Москвы по полиатлону🥈 В начале апреля прошёл Кубок Москвы по полиатлону (троеборье с бегом). В сумме по трём дисциплинам: стрельбе, подтягиванию и бегу — Александр набрал 176 очков, став серебряным призёром в возрастной группе 21–23 года среди юниоров. Беговой клуб «Альянса» регулярно проводит пробежки на разные дистанции и завоёвывает медали во многих соревнованиях. Об этом говорят победы в массовых беговых челленджах, один из последних — «Пульс России», где нашим студентам не было равных! Поздравляем Александра и желаем ему дальнейших спортивных успехов! 💯</string>
    <string name="final_score">Итоговый счет</string>
    <string name="group_stage">Групповой этап</string>
    <string name="start_game">До начала игры</string>
    <string name="title_activity_events_view">EventsView</string>
    <string name="title_activity_event_details">EventDetails</string>

</resources>
