<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="ru.sscalliance.ui.news.main.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_sport"
        android:name="ru.sscalliance.ui.sport.mainScreen.presentation.view.SportFragment"
        android:label="@string/title_sport"
        tools:layout="@layout/fragment_sport" />

    <fragment
        android:id="@+id/navigation_sportclub"
        android:name="ru.sscalliance.ui.sportClub.presentation.view.SportClubFragment"
        android:label="@string/title_sportclub"
        tools:layout="@layout/fragment_sport_club" />

    <fragment
        android:id="@+id/navigation_team"
        android:name="ru.sscalliance.ui.team.presentation.view.TeamFragment"
        android:label="@string/title_team"
        tools:layout="@layout/fragment_teams" />
</navigation>
