<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/itemEventImage"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/itemEventTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/tag"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/itemEventImage"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/itemEventTitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/news_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:maxLines="3"
        app:layout_constraintBottom_toTopOf="@+id/itemEventTag"
        app:layout_constraintStart_toStartOf="@+id/itemEventImage" />

    <TextView
        android:id="@+id/itemEventPublicationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_news_date"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/news_date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/itemEventTitle"
        app:layout_constraintStart_toStartOf="@+id/itemEventImage" />

</androidx.constraintlayout.widget.ConstraintLayout>
